1) Validation improvements 2) Database efficency improvements 3)Code refactoring and cleaning

--- a/AWSServerless1/appsettings.json
+++ b/AWSServerless1/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AppS3Bucket": "",
   "ConnectionStrings": {
-    "BillManagerDBContext": "Server=database-sql-server.cbinyxuusssz.us-west-2.rds.amazonaws.com;Database=BillSplitContext;User Id=admin;Password=BigSecret123;MultipleActiveResultSets=true"
+    "BillManagerDBContext": "Server=database-sql-server.cbinyxuusssz.us-west-2.rds.amazonaws.com;Database=BillSplitContext;User Id=admin;Password=BigSecret123"
   }
 }
